Added transaction list filters for dates and sub+categories